todo app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: bidhe1/todo_app:latest
          volumeMounts:
            - name: image-cache
              mountPath: /app/storage
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: image-cache
          emptyDir: {}
        - name: config-volume
          configMap:
            name: app-config
