todo app/manifests/service2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-busybox
  namespace: project
  labels:
    app: my-busybox
spec:
  containers:
    - image: busybox
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
  restartPolicy: Always
