todo app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - protocol: TCP
      port: 1235
      targetPort: 3000
